# effectserver2-rs

./: .gitignore  Cargo.toml  LICENSE  config.example.yaml  config.json  config.yaml  lights_random.js  lights_wave.py
src/: lib.rs  main.rs
src/client/: mod.rs
src/config/: mod.rs
src/host/: mod.rs  udpclient.rs
src/host/enttec/: mod.rs
src/host/proxy/: mod.rs
src/listener/: mod.rs
src/listener/udp/: mod.rs
src/listener/web/: mod.rs
src/mapper/: mod.rs  parser.rs
src/mapper/monitor/: mod.rs  monitor.html  monitor.js
src/parser/: mod.rs
src/server/: mod.rs
static/: index.html  script.js
