[package]
name = "effectserver2-rs"
version = "0.3.0"
authors = ["Tommi Teistelä <totateis@gmail.com>"]
edition = "2018"
license = "MIT"

default-run = "effectserver"

[dependencies]
byteorder = "1.4.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
serialport = "4.1.0"
warp = "0.3.2"
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3.21"
crossbeam = "0.8.1"
