[package]
name = "effectserver2-rs"
version = "0.4.0"
authors = ["Tommi Teistelä <totateis@gmail.com>"]
edition = "2018"
license = "MIT"

default-run = "effectserver"

[dependencies]
axum = { version = "0.5.1", features = ["ws"] }
axum-client-ip = "0.2.0"
byteorder = "1.4.3"
crossbeam = "0.8.1"
futures-util = "0.3.21"
hyper = "0.14.18"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
serialport = "4.1.0"
tokio = { version = "1.17.0", features = ["full"] }
tracing-subscriber = "0.3.11"
