[package]
name = "effectserver2-rs"
version = "0.4.0"
authors = ["Tommi Teistelä <totateis@gmail.com>"]
edition = "2018"
license = "MIT"

default-run = "effectserver"

[dependencies]
axum = { version = "0.6.10", features = ["ws"] }
axum-client-ip = "0.4.0"
byteorder = "1.4.3"
crossbeam = "0.8.2"
futures-util = "0.3.26"
hyper = "0.14.24"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_yaml = "0.9.17"
serialport = "4.2.0"
tokio = { version = "1.26.0", features = ["full"] }
tracing-subscriber = "0.3.16"
